# robot-project

./: .gitignore  Dockerfile  Dockerfile.ros-core  Dockerfile.usb-camera  Makefile  README.md  STATE.md  STATE.update.md  STATUS.md  docker-compose.yml  roboclaw_probe.py  roboclaw_twitch.py  roboclaw_twitch_duty.py
_snapshots/: project-snapshot-20250814-145507.md  project-snapshot-20250814-145658.md
config/: roboclaw.yaml  usb_cam.params.yaml
docker/: .env  Dockerfile.usb-cam  Dockerfile.usb-camera  camtest.Dockerfile  docker-compose.override.yml  docker-compose.override.yml.bak.1755745154  docker-compose.override.yml.bak.1755745294  docker-compose.override.yml.bak.1755786307  docker-compose.override.yml.bak.1755786799  docker-compose.override.yml.bak.1755787394  docker-compose.override.yml.bak.1755791994  docker-compose.override.yml.bak.1755795163  docker-compose.override.yml.bak.1755795393  docker-compose.override.yml.bak.1755795613  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak.1755829188  docker-compose.yml.bak.20250823-1956  entrypoint-usb-camera.sh  v412.Dockerfile  v4l2.Dockerfile  wvs.Dockerfile
docs/: PROGRESS-2025-08-10.md
reports/: 2025-08-12.md
robot_ws/: Dockerfile.roboclaw
robot_ws/src/opencv_node/: package.xml  setup.cfg  setup.py
robot_ws/src/opencv_node/opencv_node/: __init__.py  opencv_node.py
robot_ws/src/roboclaw_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_ws/src/roboclaw_driver/roboclaw_driver/: roboclaw_driver.py
scripts/: _rc_util.py  backup_robot.sh  backup_to_github.sh  commit_dashboard_fix.sh  consolidate_and_update.sh  (+20 more)
(+74 files in other folders)
